[gd_scene load_steps=11 format=3 uid="uid://cn0jlvtnbb8sf"]

[ext_resource type="Script" path="res://scenes/cargo_container.gd" id="1_51ftl"]
[ext_resource type="Texture2D" uid="uid://dr8a1ch38v7xi" path="res://assets/Space_Nav_Parts_48px.png" id="2_y63at"]
[ext_resource type="PackedScene" uid="uid://cm1mv2qoreuvf" path="res://scenes/button_prompt.tscn" id="4_b85lu"]
[ext_resource type="Texture2D" uid="uid://cvq1dj2wgkxd8" path="res://assets/shift_key.png" id="5_saafw"]
[ext_resource type="Texture2D" uid="uid://bfvw73hequum0" path="res://assets/right_mouse_button.png" id="6_p5dyw"]
[ext_resource type="PackedScene" uid="uid://jixc6y6vnibi" path="res://scenes/cargo_items/CargoItemSlot.tscn" id="7_aa4b6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4lux"]
size = Vector2(42, 138)

[sub_resource type="CircleShape2D" id="CircleShape2D_ym6lk"]
radius = 12.0416

[sub_resource type="Shader" id="Shader_lqjn1"]
code = "shader_type canvas_item;

uniform bool top;
uniform bool left;
uniform bool right;
uniform bool bottom;
uniform bool topleft;
uniform bool topright;
uniform bool bottomleft;
uniform bool bottomright;
uniform vec4 color  : source_color = vec4(1.0);
uniform bool inside = false;
uniform bool enabled = false;

bool check(sampler2D sampler, vec2 uv, vec2 pixel_size, vec2 offset, bool _inside)
{
	vec4 c1 = textureLod(sampler, uv                      , 0.0);
	vec4 c2 = textureLod(sampler, uv - offset * pixel_size, 0.0);
	vec4 c3 = textureLod(sampler, uv + offset * pixel_size, 0.0);
	if (_inside) return (c1.a > 0.0) == true && (c3.a > 0.0) == false;
	return (c1.a > 0.0) == false && (c2.a > 0.0) == true;
}

void fragment() 
{
	if (enabled)
	{
		bool b_top         = check(TEXTURE, UV, TEXTURE_PIXEL_SIZE, vec2(+0,-1), inside) && top;
		bool b_left        = check(TEXTURE, UV, TEXTURE_PIXEL_SIZE, vec2(-1,+0), inside) && left;
		bool b_right       = check(TEXTURE, UV, TEXTURE_PIXEL_SIZE, vec2(+1,+0), inside) && right;
		bool b_bottom      = check(TEXTURE, UV, TEXTURE_PIXEL_SIZE, vec2(+0,+1), inside) && bottom;
		bool b_topleft     = check(TEXTURE, UV, TEXTURE_PIXEL_SIZE, vec2(-1,-1), inside) && topleft;
		bool b_topright    = check(TEXTURE, UV, TEXTURE_PIXEL_SIZE, vec2(+1,-1), inside) && topright;
		bool b_bottomleft  = check(TEXTURE, UV, TEXTURE_PIXEL_SIZE, vec2(-1,+1), inside) && bottomleft;
		bool b_bottomright = check(TEXTURE, UV, TEXTURE_PIXEL_SIZE, vec2(+1,+1), inside) && bottomright;
		
		if (b_top || b_left || b_right || b_bottom || b_topleft || b_topright || b_bottomleft || b_bottomright)
		{
			COLOR.rgb = color.rgb;
			COLOR.a  += (1.0 - COLOR.a) * color.a;
		}
	}
	
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3258a"]
resource_local_to_scene = true
shader = SubResource("Shader_lqjn1")
shader_parameter/top = true
shader_parameter/left = true
shader_parameter/right = true
shader_parameter/bottom = true
shader_parameter/topleft = true
shader_parameter/topright = true
shader_parameter/bottomleft = true
shader_parameter/bottomright = true
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/inside = false
shader_parameter/enabled = false

[node name="CargoContainer" type="RigidBody2D"]
collision_layer = 5
input_pickable = true
mass = 250.0
gravity_scale = 0.0
script = ExtResource("1_51ftl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_v4lux")

[node name="TopInteractionArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopInteractionArea2D"]
position = Vector2(0, -68)
shape = SubResource("CircleShape2D_ym6lk")
metadata/_edit_lock_ = true

[node name="BottomInteractionArea2D" type="Area2D" parent="."]
position = Vector2(0, 69)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomInteractionArea2D"]
shape = SubResource("CircleShape2D_ym6lk")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_3258a")
texture = ExtResource("2_y63at")
region_enabled = true
region_rect = Rect2(288, 96, 48, 144)

[node name="TopPinJoint" type="PinJoint2D" parent="."]
position = Vector2(0, -73)
disable_collision = false

[node name="ChainSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 63)
texture = ExtResource("2_y63at")
region_enabled = true
region_rect = Rect2(69, 81, 6, 18)

[node name="ButtonPrompt" parent="." instance=ExtResource("4_b85lu")]
offset_left = 24.0
offset_top = -11.0
offset_right = 157.0
offset_bottom = 27.0

[node name="Key" parent="ButtonPrompt" index="0"]
offset_left = 13.0
offset_right = 51.0
size_flags_horizontal = 0
texture = ExtResource("5_saafw")

[node name="Key2" parent="ButtonPrompt" index="1"]
visible = true
offset_left = 69.0
offset_top = -1.0
offset_right = 83.0
offset_bottom = 17.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_p5dyw")

[node name="Label" parent="ButtonPrompt" index="2"]
text = "Disconnect"

[node name="Label2" type="Label" parent="ButtonPrompt"]
layout_mode = 2
offset_left = 52.0
offset_top = 1.0
offset_right = 61.0
offset_bottom = 17.0
size_flags_horizontal = 0
text = "+"

[node name="CargoItemSlots" type="Node2D" parent="."]

[node name="CargoItemSlot" parent="CargoItemSlots" instance=ExtResource("7_aa4b6")]
position = Vector2(-8, -50)

[node name="CargoItemSlot2" parent="CargoItemSlots" instance=ExtResource("7_aa4b6")]
position = Vector2(8, -50)

[node name="CargoItemSlot3" parent="CargoItemSlots" instance=ExtResource("7_aa4b6")]
position = Vector2(-8, -25)

[node name="CargoItemSlot4" parent="CargoItemSlots" instance=ExtResource("7_aa4b6")]
position = Vector2(8, -25)

[node name="CargoItemSlot5" parent="CargoItemSlots" instance=ExtResource("7_aa4b6")]
position = Vector2(-8, -8)

[node name="CargoItemSlot6" parent="CargoItemSlots" instance=ExtResource("7_aa4b6")]
position = Vector2(8, -8)

[node name="CargoItemSlot7" parent="CargoItemSlots" instance=ExtResource("7_aa4b6")]
position = Vector2(-8, 9)

[node name="CargoItemSlot8" parent="CargoItemSlots" instance=ExtResource("7_aa4b6")]
position = Vector2(8, 9)

[node name="CargoItemSlot9" parent="CargoItemSlots" instance=ExtResource("7_aa4b6")]
position = Vector2(-8, 33)

[node name="CargoItemSlot10" parent="CargoItemSlots" instance=ExtResource("7_aa4b6")]
position = Vector2(8, 33)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]

[editable path="ButtonPrompt"]
